fixed validator.nu error: scrollbar attribute in iframe tag is obsolete

--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -144,9 +144,9 @@ nav.primary ul li a:hover {
 
 .header{ padding:0px;}
 
-#vizcallout {width:100%; height:150px; border:0; float:right; margin:0px; padding:0px;}
+#vizcallout {width:100%; height:170px; border:0; float:right; margin:0px; padding:0px; overflow:hidden}
 /*#vizcallout {border-top:thin solid #ccc; border-bottom:thin solid #ccc;}*/
-.vizcallout {background:#fff; padding:30px 0; margin:0px 0;}
+.vizcallout {background:#fff; padding:30px 0 0 0; margin:0px 0; overflow:hidden}
 
 .callout{background:#f30; padding:30px 0;}
 .section{padding:4.5% 0; border-bottom: 1px solid #CCC;}
@@ -210,5 +210,5 @@ h2.explain{line-height:34px;}
 
 
 /*ABOUT*/
-#about{padding-top:80px; margin-top:80px; margin-bottom:80px; padding-bottom:80px;}
+#about{padding-top:20px; margin-top:20px; margin-bottom:80px; padding-bottom:80px;}
 .about{background: #121210; color: #CBCBCB; padding:80px 0; }
